<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.cyy.interthread.MainActivity">
    <Button
        android:id="@+id/btn_thread_inter_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_inter_a"
        android:textAllCaps="false"
        android:onClick="doClick"/>
    <Button
        android:id="@+id/btn_thread_inter_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_inter_b"
        android:textAllCaps="false"
        android:onClick="doClick"/>
    <Button
        android:id="@+id/btn_thread_inter_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_inter_c"
        android:textAllCaps="false"
        android:onClick="doClick"/>
    <Button
        android:id="@+id/btn_thread_inter_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_inter_d"
        android:textAllCaps="false"
        android:onClick="doClick"/>
    <Button
        android:id="@+id/btn_thread_inter_e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_inter_e"
        android:textAllCaps="false"
        android:onClick="doClick"/>
</LinearLayout>
